Update note Microelectronics Failure Analysis Desk Reference(7th Edition)/Section 1 Failure Analysis Process and Management/5. 失效分析实验室管理原则与实践.md

--- a/src/site/notes/Microelectronics Failure Analysis Desk Reference(7th Edition)/Section 1 Failure Analysis Process and Management/5. 失效分析实验室管理原则与实践.md
+++ b/src/site/notes/Microelectronics Failure Analysis Desk Reference(7th Edition)/Section 1 Failure Analysis Process and Management/5. 失效分析实验室管理原则与实践.md
@@ -44,7 +44,7 @@ FA人员的招聘颇具挑战性。一个优秀的失效分析工程师（FA Eng
 
 在岗培训不能没有计划或随意进行——这样的做法很容易导致混乱、受训者失望和培训者沮丧。必须制定并记录目标，建立培训流程，设定时间表，并且最重要的是，管理层的监督和持续支持也是必须的。需要有一个明确的工作描述，并且导师（经验丰富的分析人员）和学员（新手）都需要充分了解预期和目标。还需要尽量减少工作场所的干扰。根据几个独立的评估，培养一名合格的失效分析人员需要18-24个月的时间，以及高达25万美元的费用，其中包括薪水、福利、材料等。此外，这种培训需求将持续存在（尽管强度较低）直到分析人员职业生涯结束。电子行业特别是集成电路行业发展迅速——以至于每年我们所知道的东西和我们使用的工具都会变得过时或效率低下，有时甚至完全淘汰。出现了一些十年前不存在的新工具和新技术，比如激光电压探测/成像或EOP/EOFM、可见光探测、等离子体聚焦离子束（[[Microelectronics Failure Analysis Desk Reference(7th Edition)/Section 5 FIB Technique and Circuit Edit/FIB概述#Plasma FIB\|Plasma FIB]]）等。同时，一些新材料和新工艺的复杂性也使得现有的方法失效（比如FinFET三栅极、high-K栅极、硅通孔TSV、3D封装和面板级封装PLP等）。学无止境。这就像失效分析的摩尔定律——你现在用的技术在24-36个月后就可能会过时。面对这种需求以及相关的成本和时间，一个重要问题是…
 
-[^注]: 这里原文为 see one, do one, teach one，我觉得更传神
+[^注]: 译者注：这里原文为 see one, do one, teach one，我觉得更传神
 
 ### 留任 Retetion
 
