Update note Microelectronics Failure Analysis Desk Reference(7th Edition)/Section 1 Failure Analysis Process and Management/5. 失效分析实验室管理原则与实践.md

--- a/src/site/notes/Microelectronics Failure Analysis Desk Reference(7th Edition)/Section 1 Failure Analysis Process and Management/5. 失效分析实验室管理原则与实践.md
+++ b/src/site/notes/Microelectronics Failure Analysis Desk Reference(7th Edition)/Section 1 Failure Analysis Process and Management/5. 失效分析实验室管理原则与实践.md
@@ -107,15 +107,31 @@ FA运营所属部门与公司的业务类型和规模密切相关。例如，在
 
 ## 实验室设计与运营 Lab Design & Operations
 
-
-
 ### 实验室设计 Lab Design:
 
-
+失效分析实验室设计时要考虑工作量大小。空间大小取决于需要多少工具和人员。化学去层工艺需要“湿”空间，这种空间成本较高（需要通风、排水等设施），也是使用频率最高的空间。安全问题要遵守国家或地方政府的法规和法律，也要符合企业自身的政策。实验室人数由组织结构、工作量、成本限制、周期时间经验和要求以及工具组合决定。运营成本包括提供基本工具覆盖和分析支持所需的人员和设备成本（固定成本）以及由完成工作量或缩短周期时间所需的额外成本（变动成本）。固定成本主要是与做一个样品相关的折旧、水电费、设备维护、材料和劳动力成本。例如，如果某种产品或产品类型平均需要 2.0 天才能完成分析，则一个分析人员平均每周可以完成 2.5 个案子或每年约 125 个案子。因此，在不考虑行政管理或支持任务的情况下，预计每有 125 个案子就需要增加一个分析人员。
 
 ### 实验室运营 Lab Operations
 
+失效分析业务有几种日常运营模式。它们包括[^3]：
 
+- 作为公司或部门资产的模式：FA 实验室不属于任何单一或本地的制造、开发或产品线，其成本分摊在公司或部门所有元素上；
+- 作为成本（或利润）中心的模式：FA 实验室按照服务收费或者按照效益评估；
+- 作为开放式校园的模式：FA 实验室对外开放，接受外部客户或合作伙伴的委托；
+- 作为专用资源的模式：FA 实验室专门服务于某个特定领域或产品线；
+- 作为分层支持的模式：FA 实验室根据不同级别和需求提供不同程度和范围的服务。
+
+其中许多模式适用于已有实验室的公司，尤其是 IDM 。但也有一些模式可以应用于独立实验室或大学环境。其中一种模式是将 FA 实验室视为公司或部门的资产。这种模式下，FA 实验室不隶属于任何具体的制造、开发或产品线。它的成本由公司或部门的所有要素共同承担，作为“税收”纳入经营成本，并不按照具体服务进行分配。如果工具成本较高，而产品种类较多，那么这种模式比较适合拥有多个制造商的中型供应商。
+
+FA 实验室可以采用成本（或利润）中心模式来运营。这种模式下，FA 实验室是一个独立的实体，它根据“按需”原则向需要服务的客户收费（或赚钱），以覆盖其运营成本（或增加利润）。实验室可以在公司环境中自给自足，也可以是一个盈利机构（无论是公司/部门还是独立实验室），提供超出成本回收的投资回报。这种模式有利于将 FA 运营的成本按因果关系分配给客户，并使客户能够通过控制提交案子的数量来控制自己的成本。
+
+有趣的是，一些公司采用了“开放式校园”的运营模式。在这种模式下，FA团队由少数专家组成，他们负责提供设施、工具、技术开发、文档和培训。FA人员不仅允许来自不同部门或公司的人员使用实验室进行自己的分析，还可以辅助他们完成少量非常复杂的分析。FA的主要功能是：维护实验室、提供培训和认证，并根据需要开发或采购新的技术/工具。这种模式类似于学校里的实验室：实验室成本（包括人员）按照使用时间比例在各个使用者之间分摊。这样做可以大幅降低FA团队本身的规模与成本。但同时也存在一些风险：比如，个人使用不频繁时技能可能会退化，或者由于不仔细使用工具而导致维护成本增加。
+
+专用资源模式是一种常见于大公司的运营方式，也适用于第三方实验室或研究机构/大学在特定合同项目上的工作。这种模式的基本原则是，在每年的计划周期内，与客户协商并确定资源需求。并根据过去的历史、计划的产量（晶圆开始、出货、可靠性监测策略、资格认证等）、工艺/产品组合和技术复杂度等因素来预测资源需求。虽然实验室资源可以灵活地调配，但签订服务合同还是更有保障。
+
+可以采用分层支持的方法，缩短分析周期和优化工作流程。前提是，要尽量在距离失效发生现场最近的地方进行失效分析。建立不同级别的实验室，从简单快速的检查站（可能在设计部门或销售部门），到中等规模和设备齐全的区域实验室，再到能够提供全面支持的中心实验室。这样做的好处是可以把一些容易处理的问题（比如包装上的机械损伤）交给低级别的实验室，避免占用中心实验室的资源。这样做可以节省分析时间，当然也需要投入资本并承受空转成本。
+
+[^3]: 译者注：这里与原文不同，是ChatGPT做的扩展，感觉很不错，所以保留了。
 
 ## 战略发展 Strategic Development
 
