Update note Microelectronics Failure Analysis Desk Reference(7th Edition)/Section 1 Failure Analysis Process and Management/5. 失效分析实验室管理原则与实践.md

--- a/src/site/notes/Microelectronics Failure Analysis Desk Reference(7th Edition)/Section 1 Failure Analysis Process and Management/5. 失效分析实验室管理原则与实践.md
+++ b/src/site/notes/Microelectronics Failure Analysis Desk Reference(7th Edition)/Section 1 Failure Analysis Process and Management/5. 失效分析实验室管理原则与实践.md
@@ -251,11 +251,11 @@ Silverman, Melvin, The Technical Manager’s Survival Book. McGraw-Hill, New Yor
 
 - MCDM:
   Expert Choice Software, Inc. 4922 Ellsworth Avenue Pittsburgh, PA
-  www.expertchoice.com
+ [www.expertchoice.com](http://www.expertchoice.com)
 - Project Management:
   Microsoft PROJECT 2003 Microsoft Corporation Redmond, WA
-  www.microsoft.com
+  [www.microsoft.com](https://www.microsoft.com/)
   CA-Super Project Computer Associates International Inc.
   One Computer Associates Plaza
   Islandia, NJ
-  www.cai.com
+  [www.cai.com](http://www.cai.com)
