Update note Microelectronics Failure Analysis Desk Reference(7th Edition)/Section 1 Failure Analysis Process and Management/5. 失效分析实验室管理原则与实践.md

--- a/src/site/notes/Microelectronics Failure Analysis Desk Reference(7th Edition)/Section 1 Failure Analysis Process and Management/5. 失效分析实验室管理原则与实践.md
+++ b/src/site/notes/Microelectronics Failure Analysis Desk Reference(7th Edition)/Section 1 Failure Analysis Process and Management/5. 失效分析实验室管理原则与实践.md
@@ -265,3 +265,7 @@ Silverman, Melvin, The Technical Manager’s Survival Book. McGraw-Hill, New Yor
   One Computer Associates Plaza
   Islandia, NJ
   [www.cai.com](http://www.cai.com)
+
+***
+My comments:
+- 非常好的一篇文章，每个FA Manager都应该读一读。
