Update note Microelectronics Failure Analysis Desk Reference(7th Edition)/Section 1 Failure Analysis Process and Management/4. 用于高级板级失效分析的非破坏性技术.md

--- a/src/site/notes/Microelectronics Failure Analysis Desk Reference(7th Edition)/Section 1 Failure Analysis Process and Management/4. 用于高级板级失效分析的非破坏性技术.md
+++ b/src/site/notes/Microelectronics Failure Analysis Desk Reference(7th Edition)/Section 1 Failure Analysis Process and Management/4. 用于高级板级失效分析的非破坏性技术.md
@@ -11,3 +11,50 @@
 
 *翻译整理：Ernest Liu，mail to : 2020022102@szjm.edu.cn*
 
+# 摘要 Abstract
+
+随着微型化和功能增加的趋势，印刷电路板 (PCB) 必须应对更高的焊点密度、更小的特征尺寸和更多种类的半导体封装组装。这一趋势还包括了 3D 器件集成构建，例如堆叠芯片器件和封装叠封装(PoP, package-on-package)。这些设计实现为质量和可靠性设定了新的标准，也给相关的失效分析带来了影响。由于导致缺陷行为的物理根因可能深埋在器件结构中，并且由于三维器件结构增加了多样性，因此局部电性探测（探针）越来越受限，系统的复杂性要求在分析过程中保持整体功能完好。因此，非破坏性测试是首要的，并且导致整个失效分析流程发生了显著的变化。X 射线显微镜、热成像和超声成像或时域反射法等方法是合适的替代方案，它们正在持续进步并适应，以弥合过去、现在和未来板级失效分析之间的差距。本文将讨论一个先进板级失效分析流程的案例，并介绍可以实现非破坏性测试的技术。本文还将给出两个应用技术完成高效、高成功率缺陷定位与分析的案例。
+
+# Introduction
+
+
+# Advanced Board Level Analysis Workflow
+
+
+# Operational principle of Non-Destructive Failure
+
+
+## Analysis Techniques
+
+
+### Magnetic Current Imaging (MCI)
+
+
+### Infrared Thermography (IR)
+
+
+### Time-Domain Reflectometry (TDR) and Electro-Optical Terahertz Reflectometry (EOTPR)
+
+
+
+### Scanning Acoustic Microscopy (SAM)
+
+
+### 2D & 3D X-Ray Tomography
+
+
+## Case studies
+
+
+### Case study I: Root cause analysis on board level
+
+
+### Case study II: Root cause analysis from board to component level
+
+
+# Conclusions
+
+
+# References
+
+
