Update note Microelectronics Failure Analysis Desk Reference(7th Edition)/Section 1 Failure Analysis Process and Management/5. 失效分析实验室管理原则与实践.md

--- a/src/site/notes/Microelectronics Failure Analysis Desk Reference(7th Edition)/Section 1 Failure Analysis Process and Management/5. 失效分析实验室管理原则与实践.md
+++ b/src/site/notes/Microelectronics Failure Analysis Desk Reference(7th Edition)/Section 1 Failure Analysis Process and Management/5. 失效分析实验室管理原则与实践.md
@@ -12,7 +12,7 @@
 
 *翻译整理：Ernest Liu，mail to : 2020022102@szjm.edu.cn*
 
-# 介绍 Introduction
+# 引言 Introduction
 
 电子元件的失效分析 (FA) 是一项高度技术性的活动，需要高技能人员、日益复杂（和日益昂贵）的设备，以及开发日益精细的技术和方法来识别导致器件不符合规范的缺陷的位置、性质和根本原因。待分析的器件可能从分立器件 (discrete)、被动元件 (passive components) 到超大规模集成电路 (ULSI) 不等。在任何情况下，失效分析实验室 (FA Lab) 的运行和发展都需要考虑成本效益、客户满意度和未来技术挑战。本文的目的，是激发读者思考失效分析实验室运营及其各自业务管理要求的方方面面。虽然主要重点是半导体集成电路 (IC) 的操作，但其基本原理和方法也适用于实验室的配置和设置。本文还包括可进一步阅读的参考资料及一些示例。
 
