Update note Microelectronics Failure Analysis Desk Reference(7th Edition)/Section 2 Incoming Inspection Tools/1. 光学显微镜.md

--- a/src/site/notes/Microelectronics Failure Analysis Desk Reference(7th Edition)/Section 2 Incoming Inspection Tools/1. 光学显微镜.md
+++ b/src/site/notes/Microelectronics Failure Analysis Desk Reference(7th Edition)/Section 2 Incoming Inspection Tools/1. 光学显微镜.md
@@ -25,13 +25,13 @@ $$index\;of\;Refraction\;N = \frac{Speed\;of\;Light\;in\;Vacuum}{Speed\;of\;Ligh
 一些常用的光的波长如下：
 | | |波长 (μm)|
 |-|-|-|
-|紫外| |0.2-0.4|
+|紫外光| |0.2-0.4|
 |可见光|紫|0.4|
 | |蓝|0.45|
 | |绿|0.5|
 | |黄|0.56|
 | |红|0.6|
-|红外|近红外|0.75~2|
+|红外光|近红外|0.75~2|
 | |短波红外|1~3|
 | |中波红外（热）|3~5|
 | |长波红外（热）|8-14|
