Update note Microelectronics Failure Analysis Desk Reference(7th Edition)/Section 2 Incoming Inspection Tools/2. 用于电子器件失效分析的 X 射线成像工具.md

--- a/src/site/notes/Microelectronics Failure Analysis Desk Reference(7th Edition)/Section 2 Incoming Inspection Tools/2. 用于电子器件失效分析的 X 射线成像工具.md
+++ b/src/site/notes/Microelectronics Failure Analysis Desk Reference(7th Edition)/Section 2 Incoming Inspection Tools/2. 用于电子器件失效分析的 X 射线成像工具.md
@@ -68,13 +68,10 @@ X 射线成像是一种能够有效地直接观察芯片表层和内部结构的
 
 # X 射线显微镜 X-ray microscopy
 
-为了在实际应用中获得超过微米级的分辨率，需要利用 X 射线光学来放大 X 射线图像。使用菲涅尔波带透镜的纳米尺度 X 射线显微镜，在实验室 X 射线源下已经实现了低于 50nm 的分辨率，在同步辐射装置下已经实现了低于 30nm 的分辨率[^16][^17]。此外，三维 nano-CT 技术也已经成为常规分析手段。这类仪器提供了比基于投影的系统高一个数量级以上的分辨率，能够以比现有能力更高的分辨率解析现代集成电路器件中的互连。然而，它们的复杂性和光学加工的难度使得它们比基于投影的系统成本更高，维护起来也更加耗时。每个二维图像的曝光时间通常在几十秒到几分钟之间，对于每个三维数据集，曝光时间通常在数小时之间。
+为了在实际应用中获得超过微米级的分辨率，需要利用 X 射线光学来放大 X 射线图像。使用菲涅尔波带透镜的纳米尺度 X 射线显微镜，在实验室 X 射线源下已经实现了低于 50nm 的分辨率，在同步辐射装置下已经实现了低于 30nm 的分辨率[^16][^17]。此外，三维 nano-CT 技术也已经成为常规分析手段。这类仪器提供了比基于投影的系统高一个数量级以上的分辨率，能够以比现有能力更高的分辨率解析现代集成电路器件中的互连。然而，它们的复杂性和光学加工的难度使得它们比基于投影的系统成本更高，维护起来也更加耗时。每个二维图像的曝光时间通常在几十秒到几分钟之间，对于每个三维数据集，曝光时间通常在数小时之间。另外，为了提高分辨率，样品尺寸应该尽可能的小。在最近的出版物中已经提出了一种新的工作流程，即使用基于激光的烧蚀进行明确的样品制备，然后进行纳米尺度的 X 射线断层扫描[^14]。该方法可以被视为类似于 SEM 到 TEM 的成像流程，被认为是对缺陷无损的，同时为未来的封装缺陷分析提供明显较高的分辨率。
 
-另外，为了提高分辨率，样品尺寸应该尽可能的小。
-
-在最近的一些出版物中，介绍了一种新的工作流程，使用基于激光的消融进行定义的样品制备，然后进行纳米尺度 X 射线断层扫描。这种方法可以类似于 SEM 到 TEM 成像的过程流程，并被认为是对缺陷无损的，同时能够为未来的封装缺陷分析提供显著更高的分辨率。
-
-在最近的出版物中已经提出了一种新的工作流程，即使用基于激光的烧蚀进行明确的样品制备，然后进行纳米尺度的 X 射线断层扫描[^14]。该方法可以被视为类似于 SEM 到 TEM 的成像流程，被认为是对缺陷无损的，同时为未来的封装缺陷分析提供明显较高的分辨率。
+[^16]: Mau-Tsu Tang, et. al., Hard X-ray Microscopy with Sub-30 nm Spatial Resolution at NSRRC, Proc. 8th Int. Conf. X-ray Microscopy, IPAP Conf. Series 7 pp.15-17.
+[^17]: Lau, S. H., Non Destructive Failure Analysis Technique With a Laboratory Based 3D X-ray Nanotomography System, LSI Testing Symposium 2006, Osaka, Japan.
 
 # Packaging Failure Analysis
 
