Update note Microelectronics Failure Analysis Desk Reference(7th Edition)/Section 2 Incoming Inspection Tools/2. 用于电子器件失效分析的 X 射线成像工具.md

--- a/src/site/notes/Microelectronics Failure Analysis Desk Reference(7th Edition)/Section 2 Incoming Inspection Tools/2. 用于电子器件失效分析的 X 射线成像工具.md
+++ b/src/site/notes/Microelectronics Failure Analysis Desk Reference(7th Edition)/Section 2 Incoming Inspection Tools/2. 用于电子器件失效分析的 X 射线成像工具.md
@@ -3,6 +3,8 @@
 ---
 
 
+原文标题：X-ray Imaging Tools for Electronic Device Failure Analysis
+
 *Revised and updated from “X-ray Imaging tools for Electronic Device Failure Analysis” by Steve Wang, Microelectronics Failure Analysis, Desk Reference, 6th Edition (2011).*
 
 *Christian Schmidt, PhD*
