Update content src/site/notes/Microelectronics Failure Analysis Desk Reference(7th Edition)/Section 3 Fault Isolation/1. 扫描逻辑的诊断及其驱动的失效分析.md

--- a/src/site/notes/Microelectronics Failure Analysis Desk Reference(7th Edition)/Section 3 Fault Isolation/1. 扫描逻辑的诊断及其驱动的失效分析.md
+++ b/src/site/notes/Microelectronics Failure Analysis Desk Reference(7th Edition)/Section 3 Fault Isolation/1. 扫描逻辑的诊断及其驱动的失效分析.md
@@ -2,6 +2,8 @@
 {"dg-publish":true,"permalink":"/microelectronics-failure-analysis-desk-reference-7th-edition/section-3-fault-isolation/1/"}
 ---
 
+- [/] 翻译中
+
 原文标题：Diagnosis of Scan Logic and Diagnosis Driven Failure Analysis
 
 *Srikanth Venkataraman*
